--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     
                     <div>
                         <label class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-                        <input type="password" id="inputPassword" required class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-primary focus:outline-none transition-colors" placeholder="••••••••">
+                        <input type="password" id="inputPassword" required class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-primary focus:outline-none transition-colors" placeholder="â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢">
                     </div>
 
                     <button type="submit" id="btnSubmit" class="w-full bg-primary hover:bg-dark text-white font-bold py-3 rounded-lg transition transform active:scale-95 shadow-lg shadow-green-500/30 flex justify-center items-center gap-2">
@@ -633,4 +633,5 @@
         init();
     </script>
 </body>
+
 </html>
