--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="h-2 w-full bg-[#059669] absolute top-0 left-0"></div>
             <div class="flex flex-col items-center mb-6">
                 <div class="w-24 h-24 rounded-full border-4 border-green-100 shadow-lg overflow-hidden mb-3 bg-white flex items-center justify-center group">
-                    <img src="./logo.png" onerror="this.src='https://ui-avatars.com/api/?name=Kenyang+In&background=059669&color=fff&size=128'" class="w-full h-full object-cover transition transform group-hover:scale-110">
+                    <img src="./logokenyang.png" onerror="this.src='https://ui-avatars.com/api/?name=Kenyang+In&background=059669&color=fff&size=128'" class="w-full h-full object-cover transition transform group-hover:scale-110">
                 </div>
                 <h1 class="text-3xl font-bold text-gray-800">Kenyang.in</h1>
             </div>
@@ -636,3 +636,4 @@
     </script>
 </body>
 </html>
+
